# libnote

./: Cargo.toml  HYBRID_PARSER_IMPLEMENTATION.md  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: ffi_test.rs  hybrid_parser_demo.rs  markdown.rs
scripts/: build-all.rs  build-android.rs  clean-all.rs  doc-all.rs  setup.rs  test-all.rs  test-android.rs
src/: document.rs  error.rs  ffi.rs  formats.rs  lib.rs  managers.rs  models.rs  repo.rs  vault.rs
src/document/: span.rs  tree.rs
src/formats/: markdown.rs  org.rs
src/managers/: backlinks.rs  tags.rs
src/parser/: detector.rs  interface.rs  manager.rs  mod.rs
src/parser/parsers/: latex.rs  markdown.rs  mod.rs  org.rs
src/repo/: file.rs  memory.rs
