[package]
name = "note"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
paste = "1.0.14"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
uuid = { version = "1.19.0", features = ["v4"] }
uniffi = "0.31.0"
thiserror = "2.0.17"
