[package]
name = "note"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
paste = "1.0.14"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
uuid = { version = "1.19.0", features = ["v4"] }
uniffi = { version = "0.31.0", features = ["cli"] }
thiserror = "2.0.17"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.31.0", features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
